# myEngine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
engine/: CMakeLists.txt  README.md
engine/include/: Collision.h  Game.h  Renderer.h  Shader.h  Sprite.h  Window.h
engine/include/Engine/: GLUtils.h  Game.h  Input.h  README.md  Renderer.h  ResourceManager.h  Shader.h  Sprite.h  Texture.h  Timer.h  Window.h
engine/include/Engine/Core/: Config.h  Logger.h  MemoryTracker.h  Profiler.h  ProfilerOverlay.h  README.md  TextRenderer.h
engine/sandbox/: CMakeLists.txt  main.cpp
engine/src/: Collision.cpp  Game.cpp  README.md  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp  glad.c  main.cpp
engine/src/Core/: GLUtils.cpp  Logger.cpp  MemoryTracker.cpp  Profiler.cpp  ProfilerOverlay.cpp  README.md  TextRenderer.cpp
engine/src/assets/: README.md
engine/src/assets/shaders/: triangle.frag
